deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitween-prod
  labels:
    app.kubernetes.io/name: bitween
    app.kubernetes.io/part-of: bitween-platform
    bitween.io/environment: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
